Se cambia a BD remota

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,10 @@
 {
     "development": {
-        "dialect": "sqlite",
-        "storage": "./database.sqlite3"
+        "username": "aopesdZqzu",
+        "password": "JxBMUvCizJ",
+        "database": "aopesdZqzu",
+        "host": "remotemysql.com",
+        "dialect": "mysql"
     },
     "test": {
         "dialect": "sqlite",
